# lsmo-shared-datasets

./: .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  datasets.rst  index.rst  installation.rst  make.bat  requirements_docs.txt  usage.rst
src/lsmo_shared_datasets/: __init__.py  cli.py
tests/: __init__.py  test_lsmo_shared_datasets.py
