[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lsmo_shared_datasets"
version = "0.1.0"
description = "LSMO Shared Datasets contains the information about the datasets available on /disk2/shared_datasets of lsmosrv5, and some code to retrieve the data from there."
readme = "README.rst"
authors = [
  {name = "Amir Elahi", email = "amir.elahi@epfl.ch"}
]
maintainers = [
  {name = "Amir Elahi", email = "amir.elahi@epfl.ch"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/amir-elahi/lsmo_shared_datasets/issues"
changelog = "https://github.com/amir-elahi/lsmo_shared_datasets/blob/master/changelog.md"
homepage = "https://github.com/amir-elahi/lsmo_shared_datasets"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

